--- a/public/css/index.css
+++ b/public/css/index.css
@@ -225,12 +225,18 @@ header .navbar.animate {
 
 #about ul {
 	display: grid;
-	grid-template-columns: repeat(4, minmax(140px, 200px));
+	grid-template-columns: repeat(auto-fill, minmax(100px, 140px));
 	gap: 0px 10px;
 	padding: 0px;
 	margin: 20px 0px 0px;
 	overflow: hidden;
 	list-style: none;
+}
+
+@media (max-width: 600px) {
+	#about ul {
+		justify-content: center;
+	}
 }
 
 #about ul li {
